@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 11-07-2005 fixed: dvdplayer timing
  - 11-07-2005 fixed: Labels with $ in them were displayed erratically.
  - 11-07-2005 changed: Simpler auto-switch thumb/list for My Pictures.
  - 11-07-2005 added: audio volume can now be changed in the dvdplayer
